fixed notes overlapping and added close icon to notes modal. changed info popover on editActiveCourses to tooltip

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -29,3 +29,12 @@ footer{
         border-left: 1px solid #e7e7e7;
     }
 }
+
+a.close,
+a.close:hover,
+a.close:link {
+  color: #000000;
+  text-decoration: none;
+  padding-left: 5px;
+  margin-top: -3;
+}
